some user courses api
